--- a/svg.html
+++ b/svg.html
@@ -41,7 +41,7 @@
         <label for="btn-3" class="manual"></label>
       </div>
       <div class="imagens">
-        <img src="IMG/logo.jpeg" alt="" class="imagem-1">
+        <img src="" alt="logo-site" class="imagem-1">
         <img src="IMG/cinto.jpeg" alt="" class="imagem">
         <img src="IMG/relogio.jpeg" alt="" class="imagem">
       </div>
